# cs_string

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  configure.ac
cmake/: CsStringConfig.cmake  CsStringConfigVersion.cmake
cmake/modules/: Load_Catch2.cmake
src/: Makefile.am  cs_char.h  cs_encoding.h  cs_string.cpp  cs_string.h  cs_string_iterator.h  cs_string_view.h  string.cmake
test/: CMakeLists.txt  cs_catch2.h  cs_char.cpp  cs_string.cpp  cs_string16.cpp  cs_string8.cpp  main.cpp  test.cmake  test_main.cpp
